chore: update config of start operator

--- a/notebooks/story_pipeline.ipynb
+++ b/notebooks/story_pipeline.ipynb
@@ -224,7 +224,7 @@
    "source": [
     "# define your desired input, here we wish to input a list of base64 images\n",
     "start_operator_component = create_start_operator(\n",
-    "    {\"metadata\": {\"input\": {\"title\": \"input\", \"type\": \"image_array\"}}}\n",
+    "    {\"metadata\": {\"input\": {\"title\": \"input\", \"type\": \"array\", \"instillFormat\": \"array:image/*\", \"items\": {\"type\": \"string\"}}}}\n",
     ")\n",
     "\n",
     "# create a instill model component from the connector resource\n",
