chore(notebooks): update notebooks

--- a/notebooks/model_usage.ipynb
+++ b/notebooks/model_usage.ipynb
@@ -13,19 +13,29 @@
    "execution_count": 1,
    "id": "4e558c04-cc82-4c39-9764-dc1be3ca7bb9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "E1208 03:57:04.168224000 7969234624 hpack_parser.cc:999]               Error parsing 'content-type' metadata: invalid value\n",
+      "E1208 03:57:04.170813000 7969234624 hpack_parser.cc:999]               Error parsing 'grpc-status' metadata: not an integer\n",
+      "2023-12-08 03:57:04,171.171 WARNING  Instill VDP is not serving, VDP functionalities will not work\n"
+     ]
+    }
+   ],
    "source": [
-    "from instill.clients.mgmt import MgmtClient"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "eb428582-a655-4ab6-9b7f-d6ad1a0e4497",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mgmt_client = MgmtClient()"
+    "from instill.configuration import global_config\n",
+    "# setup target instance\n",
+    "global_config.set_default(\n",
+    "    url=\"localhost:8080\",\n",
+    "    token=\"\", # put your own api_token here\n",
+    "    secure=False,\n",
+    ")\n",
+    "\n",
+    "# get the client with all services\n",
+    "from instill.clients import get_client\n",
+    "client = get_client()"
    ]
   },
   {
@@ -33,7 +43,7 @@
    "id": "698ae6f5-a273-4470-bb85-f3874bac0927",
    "metadata": {},
    "source": [
-    "### make sure the service is serving"
+    "### make sure the mgmt service is serving"
    ]
   },
   {
@@ -54,35 +64,7 @@
     }
    ],
    "source": [
-    "mgmt_client.is_serving()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dadfe91e-c9b3-4066-ac4c-c2afbfb239ff",
-   "metadata": {},
-   "source": [
-    "### import and create client for model service for model management with current user"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "304ed8c1-8e7d-41fe-8ba1-7f3bd4a22fc5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from instill.clients.model import ModelClient"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "62a171e8-d8bc-4b5c-9239-1dfa4806dcb1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_client = ModelClient(user=mgmt_client.get_user())"
+    "client.mgmt_service.is_serving()"
    ]
   },
   {
@@ -90,12 +72,12 @@
    "id": "1cb90dcd-cae3-43d3-aa9a-ce9edb0237f0",
    "metadata": {},
    "source": [
-    "### make sure the service is serving"
+    "### make sure the model service is serving"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "edc0de1a-87c2-4b6f-85f1-45294cdbb20d",
    "metadata": {},
    "outputs": [
@@ -105,13 +87,13 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model_client.is_serving()"
+    "client.mgmt_service.is_serving()"
    ]
   },
   {
@@ -124,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "5588b57a-d0ef-45b5-8563-0b36fe6eab70",
    "metadata": {},
    "outputs": [],
@@ -142,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "3876b2ec-6287-4ff5-8ab1-316b21d8113e",
    "metadata": {},
    "outputs": [],
@@ -161,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "900a6b85-6c43-4a55-a8d7-cad2e0d9a2a2",
    "metadata": {},
    "outputs": [],
@@ -330,17 +312,17 @@
    "outputs": [],
    "source": [
     "task_inputs = [\n",
-    "            model_interface.TaskInput(\n",
-    "                classification=classification.ClassificationInput(\n",
-    "                    image_url=\"https://artifacts.instill.tech/imgs/dog.jpg\"\n",
-    "                )\n",
-    "            ),\n",
-    "            model_interface.TaskInput(\n",
-    "                classification=classification.ClassificationInput(\n",
-    "                    image_url=\"https://artifacts.instill.tech/imgs/tiff-sample.tiff\"\n",
-    "                )\n",
-    "            ),\n",
-    "        ]"
+    "    model_interface.TaskInput(\n",
+    "        classification=classification.ClassificationInput(\n",
+    "            image_url=\"https://artifacts.instill.tech/imgs/dog.jpg\"\n",
+    "        )\n",
+    "    ),\n",
+    "    model_interface.TaskInput(\n",
+    "        classification=classification.ClassificationInput(\n",
+    "            image_url=\"https://artifacts.instill.tech/imgs/tiff-sample.tiff\"\n",
+    "        )\n",
+    "    ),\n",
+    "]"
    ]
   },
   {
@@ -465,7 +447,7 @@
    "id": "5ebdbd10-4358-4c22-a665-52c21bf7c9f1",
    "metadata": {},
    "source": [
-    "### now we will be getting not found error since its deleted"
+    "model.delete()"
    ]
   }
  ],
@@ -485,7 +467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
