--- a/notebooks/model_usage.ipynb
+++ b/notebooks/model_usage.ipynb
@@ -13,19 +13,27 @@
    "execution_count": 1,
    "id": "4e558c04-cc82-4c39-9764-dc1be3ca7bb9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-12-08 03:57:04,171.171 WARNING  Instill VDP is not serving, VDP functionalities will not work\n"
+     ]
+    }
+   ],
    "source": [
-    "from instill.clients.mgmt import MgmtClient"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "eb428582-a655-4ab6-9b7f-d6ad1a0e4497",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mgmt_client = MgmtClient()"
+    "from instill.configuration import global_config\n",
+    "# setup target instance\n",
+    "global_config.set_default(\n",
+    "    url=\"localhost:8080\",\n",
+    "    token=\"\", # put your own api_token here\n",
+    "    secure=False,\n",
+    ")\n",
+    "\n",
+    "# get the client with all services\n",
+    "from instill.clients import get_client\n",
+    "client = get_client()"
    ]
   },
   {
@@ -33,7 +41,7 @@
    "id": "698ae6f5-a273-4470-bb85-f3874bac0927",
    "metadata": {},
    "source": [
-    "### make sure the service is serving"
+    "### make sure the mgmt service is serving"
    ]
   },
   {
@@ -54,35 +62,7 @@
     }
    ],
    "source": [
-    "mgmt_client.is_serving()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dadfe91e-c9b3-4066-ac4c-c2afbfb239ff",
-   "metadata": {},
-   "source": [
-    "### import and create client for model service for model management with current user"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "304ed8c1-8e7d-41fe-8ba1-7f3bd4a22fc5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from instill.clients.model import ModelClient"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "62a171e8-d8bc-4b5c-9239-1dfa4806dcb1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_client = ModelClient(user=mgmt_client.get_user())"
+    "client.mgmt_service.is_serving()"
    ]
   },
   {
@@ -90,12 +70,12 @@
    "id": "1cb90dcd-cae3-43d3-aa9a-ce9edb0237f0",
    "metadata": {},
    "source": [
-    "### make sure the service is serving"
+    "### make sure the model service is serving"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "edc0de1a-87c2-4b6f-85f1-45294cdbb20d",
    "metadata": {},
    "outputs": [
@@ -105,13 +85,13 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model_client.is_serving()"
+    "client.mgmt_service.is_serving()"
    ]
   },
   {
@@ -124,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "5588b57a-d0ef-45b5-8563-0b36fe6eab70",
    "metadata": {},
    "outputs": [],
@@ -142,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "3876b2ec-6287-4ff5-8ab1-316b21d8113e",
    "metadata": {},
    "outputs": [],
@@ -161,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "900a6b85-6c43-4a55-a8d7-cad2e0d9a2a2",
    "metadata": {},
    "outputs": [],
@@ -330,17 +310,17 @@
    "outputs": [],
    "source": [
     "task_inputs = [\n",
-    "            model_interface.TaskInput(\n",
-    "                classification=classification.ClassificationInput(\n",
-    "                    image_url=\"https://artifacts.instill.tech/imgs/dog.jpg\"\n",
-    "                )\n",
-    "            ),\n",
-    "            model_interface.TaskInput(\n",
-    "                classification=classification.ClassificationInput(\n",
-    "                    image_url=\"https://artifacts.instill.tech/imgs/tiff-sample.tiff\"\n",
-    "                )\n",
-    "            ),\n",
-    "        ]"
+    "    model_interface.TaskInput(\n",
+    "        classification=classification.ClassificationInput(\n",
+    "            image_url=\"https://artifacts.instill.tech/imgs/dog.jpg\"\n",
+    "        )\n",
+    "    ),\n",
+    "    model_interface.TaskInput(\n",
+    "        classification=classification.ClassificationInput(\n",
+    "            image_url=\"https://artifacts.instill.tech/imgs/tiff-sample.tiff\"\n",
+    "        )\n",
+    "    ),\n",
+    "]"
    ]
   },
   {
@@ -390,82 +370,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "aca61186-97ce-46b6-be53-8e3c82e851a3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "name: \"users/instill-ai/models/mobilenetv2\"\n",
-      "uid: \"0b9c26f2-9d51-43ed-ae0f-30b3f280e7be\"\n",
-      "id: \"mobilenetv2\"\n",
-      "description: \"\"\n",
-      "model_definition: \"model-definitions/github\"\n",
-      "task: TASK_CLASSIFICATION\n",
-      "state: STATE_ONLINE\n",
-      "visibility: VISIBILITY_PUBLIC\n",
-      "user: \"users/4767b74d-640a-4cdf-9c6d-7bb0e36098a0\"\n",
-      "create_time {\n",
-      "  seconds: 1693596826\n",
-      "  nanos: 486756000\n",
-      "}\n",
-      "update_time {\n",
-      "  seconds: 1693596828\n",
-      "  nanos: 998432000\n",
-      "}\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(model_client.get_model(\"mobilenetv2\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "a2c3cc36-a971-4874-a7bf-81ce2dec0e02",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-09-02 03:34:09,550.550 ERROR    <_InactiveRpcError of RPC that terminated with:\n",
-      "\tstatus = StatusCode.NOT_FOUND\n",
-      "\tdetails = \"[db] getUserModel error: record not found\"\n",
-      "\tdebug_error_string = \"UNKNOWN:Error received from peer ipv6:%5B::1%5D:9080 {grpc_message:\"[db] getUserModel error: record not found\", grpc_status:5, created_time:\"2023-09-02T03:34:09.548676+08:00\"}\"\n",
-      ">\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/heiru/Projects/instill/python-sdk/instill_sdk/utils/error_handler.py\", line 12, in func_wrapper\n",
-      "    return func(*args, **kwargs)\n",
-      "  File \"/Users/heiru/Projects/instill/python-sdk/instill_sdk/clients/model.py\", line 272, in get_model\n",
-      "    return self._stub.GetUserModel(\n",
-      "  File \"/Users/heiru/miniconda3/envs/sdk/lib/python3.8/site-packages/grpc/_channel.py\", line 946, in __call__\n",
-      "    return _end_unary_response_blocking(state, call, False, None)\n",
-      "  File \"/Users/heiru/miniconda3/envs/sdk/lib/python3.8/site-packages/grpc/_channel.py\", line 849, in _end_unary_response_blocking\n",
-      "    raise _InactiveRpcError(state)\n",
-      "grpc._channel._InactiveRpcError: <_InactiveRpcError of RPC that terminated with:\n",
-      "\tstatus = StatusCode.NOT_FOUND\n",
-      "\tdetails = \"[db] getUserModel error: record not found\"\n",
-      "\tdebug_error_string = \"UNKNOWN:Error received from peer ipv6:%5B::1%5D:9080 {grpc_message:\"[db] getUserModel error: record not found\", grpc_status:5, created_time:\"2023-09-02T03:34:09.548676+08:00\"}\"\n",
-      ">\n"
-     ]
-    }
-   ],
-   "source": [
-    "del model\n",
-    "model_client.get_model(\"mobilenetv2\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5ebdbd10-4358-4c22-a665-52c21bf7c9f1",
-   "metadata": {},
-   "source": [
-    "### now we will be getting not found error since its deleted"
+    "model.delete()"
    ]
   }
  ],
@@ -485,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
