chore(notebooks): update notbook

--- a/notebooks/create_pipeline.ipynb
+++ b/notebooks/create_pipeline.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Advance pipeline\n",
-    "In the section we will be creating a more advanced pipeline using this `python-sdk` to utilize the power of `Instill VDP`!\n",
+    "## Create pipeline\n",
+    "In the section we will be creating a pipeline using this `python-sdk` to utilize the power of `Instill VDP`!\n",
     "\n",
     "Before we get into this, please make sure a local instance of `Instill VDP` and `Instill Model` is running,  and the config file had  been populated with the correct `url` and `api_token`\n",
     "\n",
