chore(notebooks): add text-to-image model notebook

--- a/notebooks/serve_custom_text_to_image_model.ipynb
+++ b/notebooks/serve_custom_text_to_image_model.ipynb
@@ -6,34 +6,36 @@
    "source": [
     "This SDK tool provides some helper functions to allow you to create and deploy custom models with ease\n",
     "\n",
-    "Let's say we want to serve a [Tiny-Llama](https://huggingface.co/TinyLlama/TinyLlama-1.1B-Chat-v0.6) with [Instill Model](https://github.com/instill-ai/model)\n",
+    "Let's say we want to serve a [SD-Turbo](https://huggingface.co/stabilityai/sd-turbo) with [Instill Model](https://github.com/instill-ai/model)\n",
     "\n",
     "1. First we need to create a file structure like the following\n",
     "\n",
     "```bash\n",
     ".\n",
     "├── README.md\n",
-    "└── tiny_llama               <=== your model name\n",
-    "    └── 1                    <=== your model version\n",
-    "        ├── model.py         <=== your model file\n",
+    "└── sd_turbo                <=== your model name\n",
+    "    └── 1                   <=== your model version\n",
+    "        ├── model.py        <=== your model file\n",
     "        ├── ray_pb2.py\n",
     "        ├── ray_pb2.pyi\n",
     "        ├── ray_pb2_grpc.py\n",
-    "        └── tinyllama        <=== model weights and dependecy folder clone from huggingface (remember to follow the LICENSE of each model)\n",
+    "        └── sd_turbo        <=== model weights and dependecy folder clone from huggingface (remember to follow the LICENSE of each model)\n",
     "```\n",
     "\n",
     "Within the `README.md` you will have to put in the info about the model inbetween the `---` section, and a brief intro down below. For example\n",
     "```\n",
     "---\n",
-    "Task: TextGenerationChat\n",
+    "Task: TextToImage\n",
     "Tags:\n",
-    "  - TextGenerationChat\n",
-    "  - TinyLlama-1.1B-Chat\n",
+    "  - TextToImage\n",
+    "  - Text-To-Image\n",
+    "  - Diffusion\n",
     "---\n",
     "\n",
-    "# Model-llama2-7b-chat-dvc\n",
+    "# Model-SD-Turbo\n",
     "\n",
-    "🔥🔥🔥 Deploy [TinyLlama-1.1B-Chat](https://huggingface.co/TinyLlama/TinyLlama-1.1B-Chat-v0.6) model.\n",
+    "🔥🔥🔥 Deploy [Stable Diffusion Turbo](https://huggingface.co/stabilityai/sd-turbo)\n",
+    "\n",
     "```\n",
     "\n",
     "2. Then we put the 3 proto definition files inside the `./{model_name}/{version}` folder, you can find them [here](https://github.com/instill-ai/model-backend/tree/main/assets/ray/proto), we are working to avoid this step in the future.\n",
@@ -52,15 +54,16 @@
    "outputs": [],
    "source": [
     "# import neccessary packages\n",
-    "import json\n",
+    "import numpy as np\n",
+    "import random\n",
     "import torch\n",
     "import ray\n",
     "from ray import serve\n",
-    "from transformers import pipeline\n",
+    "from diffusers import DiffusionPipeline\n",
     "\n",
     "# import SDK helper functions\n",
     "# const package hosts the standard Datatypes and Input class for each standard Instill AI Tasks\n",
-    "from instill.helpers.const import DataType, TextGenerationChatInput\n",
+    "from instill.helpers.const import DataType, TextToImageInput\n",
     "# ray_io package hosts the parsers to easily convert request payload into input paramaters, and model outputs to response\n",
     "from instill.helpers.ray_io import StandardTaskIO\n",
     "# ray_config package hosts the config for the model resource\n",
@@ -81,19 +84,15 @@
     "\n",
     "# use Ray's serve.deployment decorator to convert the model class to servable model\n",
     "@serve.deployment()\n",
-    "class TinyLlama:\n",
+    "class SDTurbo:\n",
     "\n",
     "    # within the __init__ function, setup the model instance with the desired framework, in this\n",
     "    # case is the pipeline from transformers\n",
     "    def __init__(self, model_path: str):\n",
-    "        self.pipeline = pipeline(\n",
-    "            \"text-generation\",\n",
-    "            model=model_path,\n",
-    "            torch_dtype=torch.float32,\n",
-    "            device_map=\"cpu\",\n",
-    "        )\n",
+    "        self.pipeline = DiffusionPipeline.from_pretrained(model_path)\n",
     "\n",
     "    # ModelMetadata tells the server what inputs the model is expecting\n",
+    "    # It will be standard for the same AI task\n",
     "    def ModelMetadata(self, req: ModelMetadataRequest) -> ModelMetadataResponse:\n",
     "        resp = ModelMetadataResponse(\n",
     "            name=req.name,\n",
@@ -101,27 +100,37 @@
     "            framework=\"python\",\n",
     "            inputs=[\n",
     "                ModelMetadataResponse.TensorMetadata(\n",
-    "                    name=\"conversation\",\n",
+    "                    name=\"prompt\",\n",
     "                    datatype=str(DataType.TYPE_STRING.name),\n",
     "                    shape=[1],\n",
     "                ),\n",
     "                ModelMetadataResponse.TensorMetadata(\n",
-    "                    name=\"max_new_tokens\",\n",
+    "                    name=\"negative_prompt\",\n",
+    "                    datatype=str(DataType.TYPE_STRING.name),\n",
+    "                    shape=[1],\n",
+    "                ),\n",
+    "                ModelMetadataResponse.TensorMetadata(\n",
+    "                    name=\"samples\",\n",
     "                    datatype=str(DataType.TYPE_UINT32.name),\n",
     "                    shape=[1],\n",
     "                ),\n",
     "                ModelMetadataResponse.TensorMetadata(\n",
-    "                    name=\"temperature\",\n",
+    "                    name=\"scheduler\",\n",
+    "                    datatype=str(DataType.TYPE_STRING.name),\n",
+    "                    shape=[-1],\n",
+    "                ),\n",
+    "                ModelMetadataResponse.TensorMetadata(\n",
+    "                    name=\"steps\",\n",
+    "                    datatype=str(DataType.TYPE_UINT32.name),\n",
+    "                    shape=[1],\n",
+    "                ),\n",
+    "                ModelMetadataResponse.TensorMetadata(\n",
+    "                    name=\"guidance_scale\",\n",
     "                    datatype=str(DataType.TYPE_FP32.name),\n",
     "                    shape=[1],\n",
     "                ),\n",
     "                ModelMetadataResponse.TensorMetadata(\n",
-    "                    name=\"top_k\",\n",
-    "                    datatype=str(DataType.TYPE_UINT32.name),\n",
-    "                    shape=[1],\n",
-    "                ),\n",
-    "                ModelMetadataResponse.TensorMetadata(\n",
-    "                    name=\"random_seed\",\n",
+    "                    name=\"seed\",\n",
     "                    datatype=str(DataType.TYPE_UINT64.name),\n",
     "                    shape=[1],\n",
     "                ),\n",
@@ -133,9 +142,9 @@
     "            ],\n",
     "            outputs=[\n",
     "                ModelMetadataResponse.TensorMetadata(\n",
-    "                    name=\"text\",\n",
-    "                    datatype=str(DataType.TYPE_STRING.name),\n",
-    "                    shape=[-1, -1],\n",
+    "                    name=\"images\",\n",
+    "                    datatype=str(DataType.TYPE_FP32.name),\n",
+    "                    shape=[-1, -1, -1, -1],\n",
     "                ),\n",
     "            ],\n",
     "        )\n",
@@ -158,9 +167,9 @@
     "        )\n",
     "\n",
     "        # use StandardTaskIO package to parse the request and get the corresponding input\n",
-    "        # for text-generation-chat task\n",
-    "        task_text_generation_chat_input: TextGenerationChatInput = (\n",
-    "            StandardTaskIO.parse_task_text_generation_chat_input(request=request)\n",
+    "        # for text-to-image task\n",
+    "        task_text_to_image_input: TextToImageInput = (\n",
+    "            StandardTaskIO.parse_task_text_to_image_input(request=request)\n",
     "        )\n",
     "\n",
     "        # prepare prompt with chat template\n",
@@ -171,31 +180,32 @@
     "        )\n",
     "\n",
     "        # inference\n",
-    "        sequences = self.pipeline(\n",
-    "            prompt,\n",
-    "            max_new_tokens=task_text_generation_chat_input.max_new_tokens,\n",
+    "        image = self.pipeline(\n",
+    "            prompt=task_text_to_image_input.prompt,\n",
+    "            negative_prompt=task_text_to_image_input.negative_prompt,\n",
     "            do_sample=True,\n",
-    "            temperature=task_text_generation_chat_input.temperature,\n",
-    "            top_k=task_text_generation_chat_input.top_k,\n",
-    "            top_p=0.95,\n",
-    "        )\n",
+    "            num_images_per_prompt=task_text_to_image_input.samples,\n",
+    "            guidance_scale=task_text_to_image_input.guidance_scale,\n",
+    "            num_inference_steps=task_text_to_image_input.steps,\n",
+    "            **task_text_to_image_input.extra_params,\n",
+    "        ).images[0]\n",
     "\n",
     "        # convert the output into response output with again the StandardTaskIO\n",
-    "        task_text_generation_chat_output = (\n",
-    "            StandardTaskIO.parse_task_text_generation_chat_output(sequences=sequences)\n",
+    "        task_text_to_image_output = StandardTaskIO.parse_task_text_to_image_output(\n",
+    "            image=image\n",
     "        )\n",
     "\n",
     "        # specify the output dimension\n",
     "        resp.outputs.append(\n",
     "            InferTensor(\n",
     "                name=\"text\",\n",
-    "                shape=[1, len(sequences)],\n",
-    "                datatype=str(DataType.TYPE_STRING),\n",
+    "                shape=[1, 1, -1, -1],\n",
+    "                datatype=str(DataType.TYPE_FP32),\n",
     "            )\n",
     "        )\n",
     "\n",
     "        # finally insert the output into the response\n",
-    "        resp.raw_output_contents.append(task_text_generation_chat_output)\n",
+    "        resp.raw_output_contents.append(task_text_to_image_output)\n",
     "\n",
     "        return resp\n",
     "\n",
@@ -203,7 +213,7 @@
     "# basically nothing needs to be changed here, we are working on to remove\n",
     "# the neccessity of this method as well\n",
     "def deploy_model(model_config: InstillRayModelConfig):\n",
-    "    c_app = TinyLlama.options(\n",
+    "    c_app = SDTurbo.options(\n",
     "        name=model_config.application_name,\n",
     "        ray_actor_options=model_config.ray_actor_options,\n",
     "        max_concurrent_queries=model_config.max_concurrent_queries,\n",
@@ -221,7 +231,7 @@
     "\n",
     "if __name__ == \"__main__\":\n",
     "    # the value passed into entry() needs to match the dependecy folder/file name\n",
-    "    func, model_config = entry(\"tinyllama\")\n",
+    "    func, model_config = entry(\"sd_turbo\")\n",
     "\n",
     "    ray.init(address=model_config.ray_addr)\n",
     "\n",
@@ -242,49 +252,11 @@
    "source": [
     "5. Finally, we can pack it up and serve it on `Instill Model`! Simply\n",
     "```bash\n",
-    "zip -r \"tiny-llama.zip\" .\n",
+    "zip -r \"sd-turbo.zip\" .\n",
     "```\n",
     "Or alternatively, if you have a LFS server or DVC bucket setup somewhere, you can also push the files along with the `.dvc` or lfs files onto github, and use our github import.\n",
     "\n",
-    "Now go to `Model Hub` page on Instill console and create a model from local with this zip, and profit!\n",
-    "\n",
-    "Here is a sample request and response with this model\n",
-    "\n",
-    "_*req:*_\n",
-    "```bash\n",
-    "curl --location 'http://localhost:8080/model/v1alpha/users/admin/models/tinyllama/trigger' \\\n",
-    "--header 'Content-Type: application/json' \\\n",
-    "--header 'Authorization: Bearer instill_sk_***' \\\n",
-    "--data '{\n",
-    "    \"task_inputs\": [\n",
-    "        {\n",
-    "            \"text_generation_chat\": {\n",
-    "                \"conversation\": [\n",
-    "                    {\n",
-    "                        \"role\": \"user\",\n",
-    "                        \"content\": \"is it unhealthy to stay up late?\"\n",
-    "                    }\n",
-    "                ],\n",
-    "                \"top_k\": 5,\n",
-    "                \"temperature\": 0.7\n",
-    "            }\n",
-    "        }\n",
-    "    ]\n",
-    "}'\n",
-    "```\n",
-    "_*resp:*_\n",
-    "```json\n",
-    "{\n",
-    "    \"task\": \"TASK_TEXT_GENERATION_CHAT\",\n",
-    "    \"task_outputs\": [\n",
-    "        {\n",
-    "            \"text_generation\": {\n",
-    "                \"text\": \"<|user|>\\nis it unhealthy to stay up late?</s>\\n<|assistant|>\\nYes, staying up late can be unhealthy. Longer hours of sleep are important for good health and well-being. The body needs time to rest and recover after a long day, and excessive sleep can lead to a range of health problems, including insomnia, obesity, and heart disease. It's essential to set a regular sleep schedule, limit screen time before bedtime, and get enough sleep to avoid sleep-related health issues.\"\n",
-    "            }\n",
-    "        }\n",
-    "    ]\n",
-    "}\n",
-    "```"
+    "Now go to `Model Hub` page on Instill console and create a model from local with this zip, and profit!"
    ]
   }
  ],
