chore(notebooks): add text-to-image example (#62)
Because

- provide more example for serving custom models

This commit

- add text-to-image example

--- a/notebooks/serve_custom_chat_model.ipynb
+++ b/notebooks/serve_custom_chat_model.ipynb
@@ -159,19 +159,13 @@
     "\n",
     "        # use StandardTaskIO package to parse the request and get the corresponding input\n",
     "        # for text-generation-chat task\n",
-    "        task_text_to_image_input: TextGenerationChatInput = (\n",
+    "        task_text_generation_chat_input: TextGenerationChatInput = (\n",
     "            StandardTaskIO.parse_task_text_generation_chat_input(request=request)\n",
     "        )\n",
     "\n",
-    "        # parse the conversation string into json\n",
-    "        try:\n",
-    "            prompt = json.loads(task_text_to_image_input.conversation)\n",
-    "        except Exception as e:\n",
-    "            raise json.decoder.JSONDecodeError from e\n",
-    "\n",
     "        # prepare prompt with chat template\n",
     "        prompt = self.pipeline.tokenizer.apply_chat_template(\n",
-    "            prompt,\n",
+    "            task_text_generation_chat_input.conversation,\n",
     "            tokenize=False,\n",
     "            add_generation_prompt=True,\n",
     "        )\n",
@@ -179,10 +173,10 @@
     "        # inference\n",
     "        sequences = self.pipeline(\n",
     "            prompt,\n",
-    "            max_new_tokens=task_text_to_image_input.max_new_tokens,\n",
+    "            max_new_tokens=task_text_generation_chat_input.max_new_tokens,\n",
     "            do_sample=True,\n",
-    "            temperature=task_text_to_image_input.temperature,\n",
-    "            top_k=task_text_to_image_input.top_k,\n",
+    "            temperature=task_text_generation_chat_input.temperature,\n",
+    "            top_k=task_text_generation_chat_input.top_k,\n",
     "            top_p=0.95,\n",
     "        )\n",
     "\n",
@@ -250,7 +244,9 @@
     "```bash\n",
     "zip -r \"tiny-llama.zip\" .\n",
     "```\n",
-    "And go to `Model Hub` page on Instill console and create a model from local with this zip, and profit!\n",
+    "Or alternatively, if you have a LFS server or DVC bucket setup somewhere, you can also push the files along with the `.dvc` or lfs files onto github, and use our github import.\n",
+    "\n",
+    "Now go to `Model Hub` page on Instill console and create a model from local with this zip, and profit!\n",
     "\n",
     "Here is a sample request and response with this model\n",
     "\n",
@@ -266,7 +262,7 @@
     "                \"conversation\": [\n",
     "                    {\n",
     "                        \"role\": \"user\",\n",
-    "                        \"content\": \"hey how are you?\"\n",
+    "                        \"content\": \"is it unhealthy to stay up late?\"\n",
     "                    }\n",
     "                ],\n",
     "                \"top_k\": 5,\n",
@@ -283,7 +279,7 @@
     "    \"task_outputs\": [\n",
     "        {\n",
     "            \"text_generation\": {\n",
-    "                \"text\": \"<|user|>\\nhey how are you?</s>\\n<|assistant|>\\nI'm doing great, how about you? 😊 \\n\\ni'm feeling good, and my day has been pretty smooth so far. I had a good weekend, spent time with family and friends, and even had some fun at the gym. I'm looking forward to tomorrow, which will be another busy day at work, but I'm excited to see how it goes. \\n\\nhow about you? How have you been doing?\"\n",
+    "                \"text\": \"<|user|>\\nis it unhealthy to stay up late?</s>\\n<|assistant|>\\nYes, staying up late can be unhealthy. Longer hours of sleep are important for good health and well-being. The body needs time to rest and recover after a long day, and excessive sleep can lead to a range of health problems, including insomnia, obesity, and heart disease. It's essential to set a regular sleep schedule, limit screen time before bedtime, and get enough sleep to avoid sleep-related health issues.\"\n",
     "            }\n",
     "        }\n",
     "    ]\n",
