docs(notebooks): update notebooks to adopt latest ray decorators

--- a/notebooks/serve_custom_text_to_image_model.ipynb
+++ b/notebooks/serve_custom_text_to_image_model.ipynb
@@ -57,8 +57,6 @@
     "import numpy as np\n",
     "import random\n",
     "import torch\n",
-    "import ray\n",
-    "from ray import serve\n",
     "from diffusers import DiffusionPipeline\n",
     "\n",
     "# import SDK helper functions\n",
@@ -66,11 +64,8 @@
     "from instill.helpers.const import DataType, TextToImageInput\n",
     "# ray_io package hosts the parsers to easily convert request payload into input paramaters, and model outputs to response\n",
     "from instill.helpers.ray_io import StandardTaskIO\n",
-    "# ray_config package hosts the config for the model resource\n",
-    "from instill.helpers.ray_config import (\n",
-    "    InstillRayModelConfig,\n",
-    "    entry,\n",
-    ")\n",
+    "# ray_config package hosts the decorators and deployment object for model class\n",
+    "from instill.helpers.ray_config import instill_deployment, InstillDeployable\n",
     "# ray_pb2 is the proto definition of the grpc request/response\n",
     "from ray_pb2 import (\n",
     "    ModelReadyRequest,\n",
@@ -82,8 +77,8 @@
     "    InferTensor,\n",
     ")\n",
     "\n",
-    "# use Ray's serve.deployment decorator to convert the model class to servable model\n",
-    "@serve.deployment()\n",
+    "# use instill_deployment decorator to convert the model class to servable model\n",
+    "@instill_deployment\n",
     "class SDTurbo:\n",
     "\n",
     "    # within the __init__ function, setup the model instance with the desired framework, in this\n",
@@ -172,13 +167,6 @@
     "            StandardTaskIO.parse_task_text_to_image_input(request=request)\n",
     "        )\n",
     "\n",
-    "        # prepare prompt with chat template\n",
-    "        prompt = self.pipeline.tokenizer.apply_chat_template(\n",
-    "            task_text_generation_chat_input.conversation,\n",
-    "            tokenize=False,\n",
-    "            add_generation_prompt=True,\n",
-    "        )\n",
-    "\n",
     "        # inference\n",
     "        image = self.pipeline(\n",
     "            prompt=task_text_to_image_input.prompt,\n",
@@ -209,41 +197,8 @@
     "\n",
     "        return resp\n",
     "\n",
-    "# global deploy_model is necessary for server to trigger the deployment\n",
-    "# basically nothing needs to be changed here, we are working on to remove\n",
-    "# the neccessity of this method as well\n",
-    "def deploy_model(model_config: InstillRayModelConfig):\n",
-    "    c_app = SDTurbo.options(\n",
-    "        name=model_config.application_name,\n",
-    "        ray_actor_options=model_config.ray_actor_options,\n",
-    "        max_concurrent_queries=model_config.max_concurrent_queries,\n",
-    "        autoscaling_config=model_config.ray_autoscaling_options,\n",
-    "    ).bind(model_config.model_path)\n",
-    "\n",
-    "    serve.run(\n",
-    "        c_app, name=model_config.model_name, route_prefix=model_config.route_prefix\n",
-    "    )\n",
-    "\n",
-    "# global deploy_model is necessary for server to trigger the undeployment\n",
-    "def undeploy_model(model_name: str):\n",
-    "    serve.delete(model_name)\n",
-    "\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    # the value passed into entry() needs to match the dependecy folder/file name\n",
-    "    func, model_config = entry(\"sd_turbo\")\n",
-    "\n",
-    "    ray.init(address=model_config.ray_addr)\n",
-    "\n",
-    "    # setup how many resources the model needs\n",
-    "    # this heavily depends on your machine\n",
-    "    # can reference `ray_actor_options` from Ray Serve\n",
-    "    model_config.ray_actor_options[\"num_cpus\"] = 6\n",
-    "\n",
-    "    if func == \"deploy\":\n",
-    "        deploy_model(model_config=model_config)\n",
-    "    elif func == \"undeploy\":\n",
-    "        undeploy_model(model_name=model_config.model_name)\n"
+    "# now simply declare a global deployable instance with model weight name or model file name\n",
+    "deployable = InstillDeployable(SDTurbo, model_weight_or_folder_name=\"sd_turbo\")\n"
    ]
   },
   {
