--- a/notebooks/serve_custom_chat_model.ipynb
+++ b/notebooks/serve_custom_chat_model.ipynb
@@ -52,10 +52,9 @@
    "outputs": [],
    "source": [
     "# import neccessary packages\n",
-    "import json\n",
+    "import numpy as np\n",
+    "import random\n",
     "import torch\n",
-    "import ray\n",
-    "from ray import serve\n",
     "from transformers import pipeline\n",
     "\n",
     "# import SDK helper functions\n",
@@ -63,11 +62,8 @@
     "from instill.helpers.const import DataType, TextGenerationChatInput\n",
     "# ray_io package hosts the parsers to easily convert request payload into input paramaters, and model outputs to response\n",
     "from instill.helpers.ray_io import StandardTaskIO\n",
-    "# ray_config package hosts the config for the model resource\n",
-    "from instill.helpers.ray_config import (\n",
-    "    InstillRayModelConfig,\n",
-    "    entry,\n",
-    ")\n",
+    "# ray_config package hosts the decorators and deployment object for model class\n",
+    "from instill.helpers.ray_config import instill_deployment, InstillDeployable\n",
     "# ray_pb2 is the proto definition of the grpc request/response\n",
     "from ray_pb2 import (\n",
     "    ModelReadyRequest,\n",
@@ -79,8 +75,8 @@
     "    InferTensor,\n",
     ")\n",
     "\n",
-    "# use Ray's serve.deployment decorator to convert the model class to servable model\n",
-    "@serve.deployment()\n",
+    "# use instill_deployment decorator to convert the model class to servable model\n",
+    "@instill_deployment\n",
     "class TinyLlama:\n",
     "\n",
     "    # within the __init__ function, setup the model instance with the desired framework, in this\n",
@@ -199,41 +195,8 @@
     "\n",
     "        return resp\n",
     "\n",
-    "# global deploy_model is necessary for server to trigger the deployment\n",
-    "# basically nothing needs to be changed here, we are working on to remove\n",
-    "# the neccessity of this method as well\n",
-    "def deploy_model(model_config: InstillRayModelConfig):\n",
-    "    c_app = TinyLlama.options(\n",
-    "        name=model_config.application_name,\n",
-    "        ray_actor_options=model_config.ray_actor_options,\n",
-    "        max_concurrent_queries=model_config.max_concurrent_queries,\n",
-    "        autoscaling_config=model_config.ray_autoscaling_options,\n",
-    "    ).bind(model_config.model_path)\n",
-    "\n",
-    "    serve.run(\n",
-    "        c_app, name=model_config.model_name, route_prefix=model_config.route_prefix\n",
-    "    )\n",
-    "\n",
-    "# global deploy_model is necessary for server to trigger the undeployment\n",
-    "def undeploy_model(model_name: str):\n",
-    "    serve.delete(model_name)\n",
-    "\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    # the value passed into entry() needs to match the dependecy folder/file name\n",
-    "    func, model_config = entry(\"tinyllama\")\n",
-    "\n",
-    "    ray.init(address=model_config.ray_addr)\n",
-    "\n",
-    "    # setup how many resources the model needs\n",
-    "    # this heavily depends on your machine\n",
-    "    # can reference `ray_actor_options` from Ray Serve\n",
-    "    model_config.ray_actor_options[\"num_cpus\"] = 6\n",
-    "\n",
-    "    if func == \"deploy\":\n",
-    "        deploy_model(model_config=model_config)\n",
-    "    elif func == \"undeploy\":\n",
-    "        undeploy_model(model_name=model_config.model_name)\n"
+    "# now simply declare a global deployable instance with model weight name or model file name\n",
+    "deployable = InstillDeployable(TinyLlama, model_weight_or_folder_name=\"tinyllama\")"
    ]
   },
   {
