chore(notebooks): minor updates

--- a/notebooks/serve_custom_chat_model.ipynb
+++ b/notebooks/serve_custom_chat_model.ipynb
@@ -40,7 +40,7 @@
     "3. Now we can `git clone` the dependencies from huggingface, with git lfs.\n",
     "```\n",
     "git lfs install\n",
-    "git clone https://huggingface.co/TinyLlama/TinyLlama-1.1B-Chat-v0.6 tinyllama\n",
+    "git clone https://huggingface.co/TinyLlama/TinyLlama-1.1B-Chat-v0.6 $PROJECT_ROOT/{modelname}/{version}/tinyllama\n",
     "```\n",
     "4. Next, we start writting our model file, which with the help of the SDK, is relatively similar to what you would expect when developing in your local environment."
    ]
@@ -89,7 +89,7 @@
     "            device_map=\"cpu\",\n",
     "        )\n",
     "\n",
-    "    # ModelMetadata tells the server what inputs the model is expecting\n",
+    "    # ModelMetadata tells the server what inputs and outputs the model is expecting\n",
     "    def ModelMetadata(self, req: ModelMetadataRequest) -> ModelMetadataResponse:\n",
     "        resp = ModelMetadataResponse(\n",
     "            name=req.name,\n",
@@ -196,7 +196,13 @@
     "        return resp\n",
     "\n",
     "# now simply declare a global deployable instance with model weight name or model file name\n",
-    "deployable = InstillDeployable(TinyLlama, model_weight_or_folder_name=\"tinyllama\")"
+    "deployable = InstillDeployable(TinyLlama, model_weight_or_folder_name=\"tinyllama\")\n",
+    "\n",
+    "# you can also have a fine-grained control of the cpu and gpu resources allocation\n",
+    "deployable.update_num_cpus(4)\n",
+    "deployable.update_num_gpus(0.5)\n",
+    "\n",
+    "# we plan to open up more detailed resource control in the future"
    ]
   },
   {
