--- a/notebooks/serve_custom_text_to_image_model.ipynb
+++ b/notebooks/serve_custom_text_to_image_model.ipynb
@@ -42,7 +42,7 @@
     "3. Now we can `git clone` the dependencies from huggingface, with git lfs.\n",
     "```\n",
     "git lfs install\n",
-    "git clone https://huggingface.co/stabilityai/sd-turbo\n",
+    "git clone https://huggingface.co/stabilityai/sd-turbo $PROJECT_ROOT/{modelname}/{version}/sd_trubo\n",
     "```\n",
     "4. Next, we start writting our model file, which with the help of the SDK, is relatively similar to what you would expect when developing in your local environment."
    ]
@@ -198,7 +198,13 @@
     "        return resp\n",
     "\n",
     "# now simply declare a global deployable instance with model weight name or model file name\n",
-    "deployable = InstillDeployable(SDTurbo, model_weight_or_folder_name=\"sd_turbo\")\n"
+    "deployable = InstillDeployable(SDTurbo, model_weight_or_folder_name=\"sd_turbo\")\n",
+    "\n",
+    "# you can also have a fine-grained control of the cpu and gpu resources allocation\n",
+    "deployable.update_num_cpus(4)\n",
+    "deployable.update_num_gpus(0.5)\n",
+    "\n",
+    "# we plan to open up more detailed resource control in the future"
    ]
   },
   {
