--- a/notebooks/serve_custom_chat_model.ipynb
+++ b/notebooks/serve_custom_chat_model.ipynb
@@ -52,8 +52,6 @@
    "outputs": [],
    "source": [
     "# import neccessary packages\n",
-    "import numpy as np\n",
-    "import random\n",
     "import torch\n",
     "from transformers import pipeline\n",
     "\n",
@@ -196,11 +194,12 @@
     "        return resp\n",
     "\n",
     "# now simply declare a global deployable instance with model weight name or model file name\n",
-    "deployable = InstillDeployable(TinyLlama, model_weight_or_folder_name=\"tinyllama\")\n",
+    "# and specify if this model is going to use GPU or not\n",
+    "deployable = InstillDeployable(TinyLlama, model_weight_or_folder_name=\"tinyllama\", use_gpu=True)\n",
     "\n",
-    "# you can also have a fine-grained control of the cpu and gpu resources allocation\n",
-    "deployable.update_num_cpus(4)\n",
-    "deployable.update_num_gpus(0.5)\n",
+    "# you can also have a fine-grained control of the min/max replica numbers\n",
+    "deployable.update_max_replicas(2)\n",
+    "deployable.update_min_replicas(0)\n",
     "\n",
     "# we plan to open up more detailed resource control in the future"
    ]
@@ -258,8 +257,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "sdk",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
