--- a/notebooks/serve_custom_chat_model.ipynb
+++ b/notebooks/serve_custom_chat_model.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "This SDK tool provides some helper functions to allow you to create and deploy custom models with ease\n",
     "\n",
-    "Let's say we want to serve a [Tiny-Llama](https://huggingface.co/TinyLlama/TinyLlama-1.1B-Chat-v0.6) with [Instill Model](https://github.com/instill-ai/model)\n",
+    "Let's say we want to serve a [Tiny-Llama](https://huggingface.co/TinyLlama/TinyLlama-1.1B-Chat-v1.0) with [Instill Model](https://github.com/instill-ai/model)\n",
     "\n",
     "1. First we need to create a file structure like the following\n",
     "\n",
@@ -16,9 +16,6 @@
     "└── tiny_llama               <=== your model name\n",
     "    └── 1                    <=== your model version\n",
     "        ├── model.py         <=== your model file\n",
-    "        ├── ray_pb2.py\n",
-    "        ├── ray_pb2.pyi\n",
-    "        ├── ray_pb2_grpc.py\n",
     "        └── tinyllama        <=== model weights and dependecy folder clone from huggingface (remember to follow the LICENSE of each model)\n",
     "```\n",
     "\n",
@@ -31,18 +28,19 @@
     "  - TinyLlama-1.1B-Chat\n",
     "---\n",
     "\n",
-    "# Model-llama2-7b-chat-dvc\n",
+    "Learn more about it [here](https://www.instill.tech/docs/v0.9.0-beta/model/prepare#model-card-metadata)\n",
     "\n",
-    "🔥🔥🔥 Deploy [TinyLlama-1.1B-Chat](https://huggingface.co/TinyLlama/TinyLlama-1.1B-Chat-v0.6) model.\n",
+    "# Model-TinyLlama-1.1b-chat-dvc\n",
+    "\n",
+    "🔥🔥🔥 Deploy [TinyLlama-1.1B-Chat](https://huggingface.co/TinyLlama/TinyLlama-1.1B-Chat-v1.0) model.\n",
     "```\n",
     "\n",
-    "2. Then we put the 3 proto definition files inside the `./{model_name}/{version}` folder, you can find them [here](https://github.com/instill-ai/model-backend/tree/main/assets/ray/proto), we are working to avoid this step in the future.\n",
-    "3. Now we can `git clone` the dependencies from huggingface, with git lfs.\n",
+    "2. Now we can `git clone` the dependencies from huggingface, with git lfs.\n",
     "```\n",
     "git lfs install\n",
-    "git clone https://huggingface.co/TinyLlama/TinyLlama-1.1B-Chat-v0.6 $PROJECT_ROOT/{modelname}/{version}/tinyllama\n",
+    "git clone https://huggingface.co/TinyLlama/TinyLlama-1.1B-Chat-v1.0 $PROJECT_ROOT/{modelname}/{version}/tinyllama\n",
     "```\n",
-    "4. Next, we start writting our model file, which with the help of the SDK, is relatively similar to what you would expect when developing in your local environment."
+    "3. Next, we start writting our model file, which with the help of the SDK, is relatively similar to what you would expect when developing in your local environment."
    ]
   },
   {
@@ -58,25 +56,22 @@
     "# import SDK helper functions\n",
     "# const package hosts the standard Datatypes and Input class for each standard Instill AI Tasks\n",
     "from instill.helpers.const import DataType, TextGenerationChatInput\n",
+    "\n",
     "# ray_io package hosts the parsers to easily convert request payload into input paramaters, and model outputs to response\n",
     "from instill.helpers.ray_io import StandardTaskIO\n",
+    "\n",
     "# ray_config package hosts the decorators and deployment object for model class\n",
     "from instill.helpers.ray_config import instill_deployment, InstillDeployable\n",
-    "# ray_pb2 is the proto definition of the grpc request/response\n",
-    "from ray_pb2 import (\n",
-    "    ModelReadyRequest,\n",
-    "    ModelReadyResponse,\n",
-    "    ModelMetadataRequest,\n",
-    "    ModelMetadataResponse,\n",
-    "    ModelInferRequest,\n",
-    "    ModelInferResponse,\n",
-    "    InferTensor,\n",
+    "from instill.helpers import (\n",
+    "    construct_infer_response,\n",
+    "    construct_metadata_response,\n",
+    "    Metadata,\n",
     ")\n",
+    "\n",
     "\n",
     "# use instill_deployment decorator to convert the model class to servable model\n",
     "@instill_deployment\n",
     "class TinyLlama:\n",
-    "\n",
     "    # within the __init__ function, setup the model instance with the desired framework, in this\n",
     "    # case is the pipeline from transformers\n",
     "    def __init__(self, model_path: str):\n",
@@ -88,45 +83,58 @@
     "        )\n",
     "\n",
     "    # ModelMetadata tells the server what inputs and outputs the model is expecting\n",
-    "    def ModelMetadata(self, req: ModelMetadataRequest) -> ModelMetadataResponse:\n",
-    "        resp = ModelMetadataResponse(\n",
-    "            name=req.name,\n",
-    "            versions=req.version,\n",
-    "            framework=\"python\",\n",
+    "    def ModelMetadata(self, req):\n",
+    "        resp = construct_metadata_response(\n",
+    "            req=req,\n",
     "            inputs=[\n",
-    "                ModelMetadataResponse.TensorMetadata(\n",
-    "                    name=\"conversation\",\n",
+    "                Metadata(\n",
+    "                    name=\"prompt\",\n",
     "                    datatype=str(DataType.TYPE_STRING.name),\n",
     "                    shape=[1],\n",
     "                ),\n",
-    "                ModelMetadataResponse.TensorMetadata(\n",
+    "                Metadata(\n",
+    "                    name=\"prompt_images\",\n",
+    "                    datatype=str(DataType.TYPE_STRING.name),\n",
+    "                    shape=[1],\n",
+    "                ),\n",
+    "                Metadata(\n",
+    "                    name=\"chat_history\",\n",
+    "                    datatype=str(DataType.TYPE_STRING.name),\n",
+    "                    shape=[1],\n",
+    "                ),\n",
+    "                Metadata(\n",
+    "                    name=\"system_message\",\n",
+    "                    datatype=str(DataType.TYPE_STRING.name),\n",
+    "                    shape=[1],\n",
+    "                ),\n",
+    "                Metadata(\n",
     "                    name=\"max_new_tokens\",\n",
     "                    datatype=str(DataType.TYPE_UINT32.name),\n",
     "                    shape=[1],\n",
     "                ),\n",
-    "                ModelMetadataResponse.TensorMetadata(\n",
+    "                Metadata(\n",
     "                    name=\"temperature\",\n",
     "                    datatype=str(DataType.TYPE_FP32.name),\n",
     "                    shape=[1],\n",
     "                ),\n",
-    "                ModelMetadataResponse.TensorMetadata(\n",
+    "                Metadata(\n",
     "                    name=\"top_k\",\n",
     "                    datatype=str(DataType.TYPE_UINT32.name),\n",
     "                    shape=[1],\n",
     "                ),\n",
-    "                ModelMetadataResponse.TensorMetadata(\n",
-    "                    name=\"random_seed\",\n",
+    "                Metadata(\n",
+    "                    name=\"seed\",\n",
     "                    datatype=str(DataType.TYPE_UINT64.name),\n",
     "                    shape=[1],\n",
     "                ),\n",
-    "                ModelMetadataResponse.TensorMetadata(\n",
+    "                Metadata(\n",
     "                    name=\"extra_params\",\n",
     "                    datatype=str(DataType.TYPE_STRING.name),\n",
     "                    shape=[1],\n",
     "                ),\n",
     "            ],\n",
     "            outputs=[\n",
-    "                ModelMetadataResponse.TensorMetadata(\n",
+    "                Metadata(\n",
     "                    name=\"text\",\n",
     "                    datatype=str(DataType.TYPE_STRING.name),\n",
     "                    shape=[-1, -1],\n",
@@ -135,21 +143,10 @@
     "        )\n",
     "        return resp\n",
     "\n",
-    "    # ModelReady is the healthcheck method for the server\n",
-    "    # implement your own logic and it will reflect on the console\n",
-    "    def ModelReady(self, req: ModelReadyRequest) -> ModelReadyResponse:\n",
-    "        resp = ModelReadyResponse(ready=True)\n",
-    "        return resp\n",
-    "\n",
     "    # ModelInfer is the method handling the trigger request from Instill Model\n",
-    "    async def ModelInfer(self, request: ModelInferRequest) -> ModelInferResponse:\n",
-    "        # prepare the response\n",
-    "        resp = ModelInferResponse(\n",
-    "            model_name=request.model_name,\n",
-    "            model_version=request.model_version,\n",
-    "            outputs=[],\n",
-    "            raw_output_contents=[],\n",
-    "        )\n",
+    "    async def __call__(self, request):\n",
+    "        resp_outputs = []\n",
+    "        resp_raw_outputs = []\n",
     "\n",
     "        # use StandardTaskIO package to parse the request and get the corresponding input\n",
     "        # for text-generation-chat task\n",
@@ -159,7 +156,7 @@
     "\n",
     "        # prepare prompt with chat template\n",
     "        prompt = self.pipeline.tokenizer.apply_chat_template(\n",
-    "            task_text_generation_chat_input.conversation,\n",
+    "            task_text_generation_chat_input.chat_history,\n",
     "            tokenize=False,\n",
     "            add_generation_prompt=True,\n",
     "        )\n",
@@ -180,22 +177,28 @@
     "        )\n",
     "\n",
     "        # specify the output dimension\n",
-    "        resp.outputs.append(\n",
-    "            InferTensor(\n",
+    "        resp_outputs.append(\n",
+    "            Metadata(\n",
     "                name=\"text\",\n",
     "                shape=[1, len(sequences)],\n",
     "                datatype=str(DataType.TYPE_STRING),\n",
     "            )\n",
     "        )\n",
-    "\n",
     "        # finally insert the output into the response\n",
-    "        resp.raw_output_contents.append(task_text_generation_chat_output)\n",
+    "        resp_raw_outputs.append(task_text_generation_chat_output)\n",
     "\n",
-    "        return resp\n",
+    "        return construct_infer_response(\n",
+    "            req=request,\n",
+    "            outputs=resp_outputs,\n",
+    "            raw_outputs=resp_raw_outputs,\n",
+    "        )\n",
+    "\n",
     "\n",
     "# now simply declare a global deployable instance with model weight name or model file name\n",
     "# and specify if this model is going to use GPU or not\n",
-    "deployable = InstillDeployable(TinyLlama, model_weight_or_folder_name=\"tinyllama\", use_gpu=True)\n",
+    "deployable = InstillDeployable(\n",
+    "    TinyLlama, model_weight_or_folder_name=\"tinyllama\", use_gpu=True\n",
+    ")\n",
     "\n",
     "# you can also have a fine-grained control of the min/max replica numbers\n",
     "deployable.update_max_replicas(2)\n",
