docs(readme,notebook): update description

--- a/notebooks/serve_custom_chat_model.ipynb
+++ b/notebooks/serve_custom_chat_model.ipynb
@@ -11,15 +11,13 @@
     "1. First we need to create a file structure like the following\n",
     "\n",
     "```bash\n",
-    ".\n",
-    "├── README.md\n",
-    "└── tiny_llama               <=== your model name\n",
-    "    └── 1                    <=== your model version\n",
-    "        ├── model.py         <=== your model file\n",
-    "        └── tinyllama        <=== model weights and dependecy folder clone from huggingface (remember to follow the LICENSE of each model)\n",
+    ".                    <=== your model folder\n",
+    "├── README.md        <=== your model README\n",
+    "├── model.py         <=== your model file\n",
+    "└── tinyllama        <=== model weights and dependecy folder clone from huggingface (remember to follow the LICENSE of each model)\n",
     "```\n",
     "\n",
-    "Within the `README.md` you will have to put in the info about the model inbetween the `---` section, and a brief intro down below. For example\n",
+    "Within the `README.md` you will have to put in the info about the model in-between the `---` section, and a brief intro down below. For example\n",
     "```\n",
     "---\n",
     "Task: TextGenerationChat\n",
@@ -28,7 +26,7 @@
     "  - TinyLlama-1.1B-Chat\n",
     "---\n",
     "\n",
-    "Learn more about it [here](https://www.instill.tech/docs/v0.9.0-beta/model/prepare#model-card-metadata)\n",
+    "Learn more about it [here](https://www.instill.tech/docs/latest/model/prepare#model-card-metadata)\n",
     "\n",
     "# Model-TinyLlama-1.1b-chat-dvc\n",
     "\n",
@@ -40,7 +38,7 @@
     "git lfs install\n",
     "git clone https://huggingface.co/TinyLlama/TinyLlama-1.1B-Chat-v1.0 $PROJECT_ROOT/{modelname}/{version}/tinyllama\n",
     "```\n",
-    "3. Next, we start writting our model file, which with the help of the SDK, is relatively similar to what you would expect when developing in your local environment."
+    "3. Next, we start writing our model file, which with the help of the SDK, is relatively similar to what you would expect when developing in your local environment."
    ]
   },
   {
@@ -74,12 +72,12 @@
     "class TinyLlama:\n",
     "    # within the __init__ function, setup the model instance with the desired framework, in this\n",
     "    # case is the pipeline from transformers\n",
-    "    def __init__(self, model_path: str):\n",
+    "    def __init__(self):\n",
     "        self.pipeline = pipeline(\n",
     "            \"text-generation\",\n",
-    "            model=model_path,\n",
-    "            torch_dtype=torch.float32,\n",
-    "            device_map=\"cpu\",\n",
+    "            model=\"tinyllama\",\n",
+    "            torch_dtype=torch.bfloat16,\n",
+    "            device_map=\"auto\",\n",
     "        )\n",
     "\n",
     "    # ModelMetadata tells the server what inputs and outputs the model is expecting\n",
@@ -211,17 +209,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Finally, we can pack it up and serve it on `Instill Model`! Simply\n",
+    "5. Finally, we can pack it up and serve it on `Instill Core`! Simply\n",
     "```bash\n",
     "zip -r \"tiny-llama.zip\" .\n",
     "```\n",
     "Or alternatively, if you have a LFS server or DVC bucket setup somewhere, you can also push the files along with the `.dvc` or lfs files onto github, and use our github import.\n",
     "\n",
-    "Now go to `Model Hub` page on Instill console and create a model from local with this zip, and profit!\n",
+    "Now go to `Model` page on Instill console and create a model from local with this zip, and profit!\n",
     "\n",
     "Here is a sample request and response with this model\n",
     "\n",
-    "_*req:*_\n",
+    "_req:_\n",
     "```bash\n",
     "curl --location 'http://localhost:8080/model/v1alpha/users/admin/models/tinyllama/trigger' \\\n",
     "--header 'Content-Type: application/json' \\\n",
@@ -243,7 +241,7 @@
     "    ]\n",
     "}'\n",
     "```\n",
-    "_*resp:*_\n",
+    "_resp:_\n",
     "```json\n",
     "{\n",
     "    \"task\": \"TASK_TEXT_GENERATION_CHAT\",\n",
