feat(client): support namespace and requester

--- a/notebooks/serve_github_model.ipynb
+++ b/notebooks/serve_github_model.ipynb
@@ -32,8 +32,8 @@
     ")\n",
     "\n",
     "# get the client with all services\n",
-    "from instill.clients import get_client\n",
-    "client = get_client()"
+    "from instill.clients import init_core_client\n",
+    "client = init_core_client()"
    ]
   },
   {
