chore(domain): update production domain

--- a/notebooks/create_pipeline.ipynb
+++ b/notebooks/create_pipeline.ipynb
@@ -39,7 +39,7 @@
     "from instill.configuration import global_config\n",
     "\n",
     "global_config.set_default(\n",
-    "    url=\"api.instill.tech\",\n",
+    "    url=\"api.instill-ai.com\",\n",
     "    token=\"instill_sk***\",\n",
     "    secure=True,\n",
     ")"
