test(instill): improve unit test coverage

--- a/notebooks/create_pipeline.ipynb
+++ b/notebooks/create_pipeline.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from instill.configuration import global_config\n",
+    "from instill.config import global_config\n",
     "\n",
     "global_config.set_default(\n",
     "    url=\"api.instill-ai.com\",\n",
