--- a/notebooks/serve_github_model.ipynb
+++ b/notebooks/serve_github_model.ipynb
@@ -23,7 +23,7 @@
     }
    ],
    "source": [
-    "from instill.configuration import global_config\n",
+    "from instill.config import global_config\n",
     "# setup target instance\n",
     "global_config.set_default(\n",
     "    url=\"localhost:8080\",\n",
